gitops/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-simulator
  namespace: resource-simulator-hom
  annotations:
    image.openshift.io/triggers: |
      [
        {
          "from": {
            "kind": "ImageStreamTag",
            "name": "resource-simulator:stg",
            "namespace": "resource-simulator-hom"
          },
          "fieldPath": "spec.template.spec.containers[0].image"
        }
      ]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resource-simulator
  template:
    metadata:
      labels:
        app: resource-simulator
    spec:
      containers:
        - name: app
          image: image-registry.openshift-image-registry.svc:5000/resource-simulator-hom/resource-simulator:stg
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "1200m"
              memory: "2Gi"
            limits:
              cpu: "1200m"
              memory: "2Gi"
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/status
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
