gitops/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resource-simulator
spec:
  selector:
    app: resource-simulator
  ports:
    - name: http
      port: 80
      targetPort: 8080
